[gd_scene load_steps=4 format=3 uid="uid://b1rdfptba4fe1"]

[ext_resource type="Script" path="res://scripts/game.gd" id="1_d5yvn"]
[ext_resource type="PackedScene" uid="uid://b606qsocimnro" path="res://levels/BaseLevel.tscn" id="2_66l3o"]
[ext_resource type="PackedScene" uid="uid://dtv1fsyvvbca7" path="res://ui/tower_button.tscn" id="3_clwx2"]

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_d5yvn")

[node name="BaseLevel" parent="." instance=ExtResource("2_66l3o")]

[node name="Control" type="Control" parent="."]
anchors_preset = 0
offset_left = 550.0
offset_top = 58.0
offset_right = 1387.0
offset_bottom = 195.0

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -750.5
offset_right = 750.5
offset_bottom = 148.0
grow_horizontal = 2

[node name="TowerButtons" type="HBoxContainer" parent="PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 20

[node name="TowerButton" parent="PanelContainer/TowerButtons" instance=ExtResource("3_clwx2")]
layout_mode = 2

[node name="TowerButton2" parent="PanelContainer/TowerButtons" instance=ExtResource("3_clwx2")]
layout_mode = 2

[node name="TowerButton3" parent="PanelContainer/TowerButtons" instance=ExtResource("3_clwx2")]
layout_mode = 2

[node name="TowerButton4" parent="PanelContainer/TowerButtons" instance=ExtResource("3_clwx2")]
layout_mode = 2

[node name="TowerButton5" parent="PanelContainer/TowerButtons" instance=ExtResource("3_clwx2")]
layout_mode = 2

[node name="TowerButton6" parent="PanelContainer/TowerButtons" instance=ExtResource("3_clwx2")]
layout_mode = 2

[node name="TowerButton7" parent="PanelContainer/TowerButtons" instance=ExtResource("3_clwx2")]
layout_mode = 2

[node name="TowerParents" type="Control" parent="."]
unique_name_in_owner = true
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
